<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:gravity="center">
	
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
		android:gravity="center">
		
        <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/txt_gasto_total"/>
	
	    <TextView
	        android:id="@+id/txt_gasto_total"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
    
    </LinearLayout>
	
	<Button
		android:id="@+id/btn_cad"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/btn_cad_prod_tela"
		android:onClick="cadastraProduto"/>

	<Button
		android:id="@+id/btn_lista"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/btn_listar"/>
	
</LinearLayout>
